Update dot files

--- a/.jshintrc
+++ b/.jshintrc
@@ -38,13 +38,34 @@
 
   "predef": [
     "_",
+    "jasmine",
+    "describe",
+    "xdescribe",
+    "it",
+    "xit",
+    "beforeEach",
+    "afterEach",
+    "expect",
+    "spyOn",
+    "runs",
+    "waits",
+    "waitsFor",
+    "Benchmark",
+    "Raphael",
+    "Backbone",
+    "Modernizr",
+    "Bindable",
+    "utensils",
+    "Ext",
+    "Hammer",
+    "sinon",
+    "_gaq",
     "exports",
     "require",
     "chrome",
     "addon",
     "safari",
     "self",
-    "url",
     "Fingerprint2",
     "ZeroClipboard"
   ]
