--- a/.gemrc
+++ b/.gemrc
@@ -1,10 +1,1 @@
-:verbose: true
-:bulk_threshold: 1000
-:sources: 
-- http://gemcutter.org
-- http://gems.rubyforge.org/
-- http://gems.github.com
-gem: --no-ri --no-rdoc
-:benchmark: false
-:update_sources: true
-:backtrace: false
+gem: --no-document
