Update dot files

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,18 +1,13 @@
 [user]
   email = ralin.chimev@gmail.com
   name = Ralin Chimev
-[push]
-  default = current
 [color]
   ui = auto
 [alias]
   aa = add --all
   lo = log --oneline --decorate
 [core]
-  excludesfile = ~/.gitignore
-  autocrlf = input
-[merge]
-  ff = only
+  autocrlf = true
 [fetch]
   prune = true
 [rebase]
