--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+.DS_Store?
 .idea
 *.tmproj
 .project
@@ -17,3 +18,25 @@ tmp/*
 log/*
 .powenv
 .env
+tags
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.log
+*.sqlite
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
