--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,17 @@
 unbind C-b
-set -g prefix C-l
+set -g prefix C-s
+
+bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
+
+bind-key -n C-h select-pane -L
+bind-key -n C-j select-pane -D
+bind-key -n C-k select-pane -U
+bind-key -n C-l select-pane -R
+
+set -g default-terminal "screen-256color"
+
+set -g status-bg '#666666'
+set -g status-fg '#aaaaaa'
+
+set -g status-left-length 50
+set -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
