--- a/tmux.conf
+++ b/tmux.conf
@@ -1,17 +1,44 @@
 unbind C-b
 set -g prefix C-s
 
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
+bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
-bind-key -n C-h select-pane -L
-bind-key -n C-j select-pane -D
-bind-key -n C-k select-pane -U
-bind-key -n C-l select-pane -R
+bind - split-window -v -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+bind -n S-Left resize-pane -L 2
+bind -n S-Right resize-pane -R 2
+bind -n S-Down resize-pane -D 1
+bind -n S-Up resize-pane -U 1
+
+bind -n C-Left resize-pane -L 10
+bind -n C-Right resize-pane -R 10
+bind -n C-Down resize-pane -D 5
+bind -n C-Up resize-pane -U 5
+
+bind b break-pane -d
+bind C-j choose-tree
 
 set -g default-terminal "screen-256color"
+set -g mouse on
 
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
 
 set -g status-left-length 50
 set -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
+
+set -g base-index 1
+set -g renumber-windows on
+
+setw -g mode-keys vi
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
