--- a/tmux.conf
+++ b/tmux.conf
@@ -7,10 +7,12 @@ bind - split-window -v -c "#{pane_current_path}"
 bind \ split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 
 bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
@@ -42,3 +44,4 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
