Update tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,19 +31,19 @@ bind b break-pane -d
 bind C-j choose-tree
 
 set -g default-terminal "screen-256color"
-set -g mouse on
 
+set -g mouse on
+setw -g mode-keys vi
+
+set -g status-keys vi
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
-
 set -g status-left-length 50
 set -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
 
 set -g base-index 1
 set -g renumber-windows on
 
-setw -g mode-keys vi
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# Set "Applications in terminal may access clipboard" in iTerm2
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
