Load vim config in neovim

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,7 @@ bind c split-window -h -c "#{pane_current_path}" "rails c"
 bind b break-pane -d
 bind C-j choose-tree
 
+set -g escape-time 10
 set -g default-terminal "screen-256color"
 
 set -g mouse on
