Improve on copy/paste

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,6 +45,6 @@ set -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
 set -g base-index 1
 set -g renumber-windows on
 
-# Set "Applications in terminal may access clipboard" in iTerm2
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-selection
