--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,8 @@ set -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
 
 set -g base-index 1
 set -g renumber-windows on
+set -g default-command "reattach-to-user-namespace -l zsh"
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
