--- a/tmux.conf
+++ b/tmux.conf
@@ -3,9 +3,9 @@ set -g prefix C-s
 
 bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
-bind - split-window -v -c "#{pane_current_path}"
-bind \ split-window -h -c "#{pane_current_path}"
 bind w new-window -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -24,8 +24,9 @@ bind -n C-Right resize-pane -R 10
 bind -n C-Down resize-pane -D 5
 bind -n C-Up resize-pane -U 5
 
-bind s split-window -h -c "#{pane_current_path}" "rails s"
-bind c split-window -h -c "#{pane_current_path}" "rails c"
+bind s split-window -h -c "#{pane_current_path}" "rs"
+bind c split-window -h -c "#{pane_current_path}" "rc"
+bind t split-window -h -c "#{pane_current_path}" "be rake"
 
 bind b break-pane -d
 bind C-j choose-tree
