Change some tmux keybinds

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,8 @@ set -g prefix C-s
 
 bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
-bind h split-window -h -c "#{pane_current_path}"
-bind v split-window -v -c "#{pane_current_path}"
+bind h split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 bind w new-window -c "#{pane_current_path}"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
