Re-arrange tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,24 @@
 unbind C-b
-set -g prefix C-s
 
-bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
+set -g prefix C-s
+setw -g mode-keys vi
+set -g mouse on
+
+set -g escape-time 10
+set -g default-terminal "screen-256color"
+
+set -g status-keys vi
+set -g status-bg '#666666'
+set -g status-fg '#aaaaaa'
+set -g status-left-length 50
+set -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
+
+set -g base-index 1
+set -g renumber-windows on
+set -g default-command "reattach-to-user-namespace -l zsh"
+
+
+bind r source-file ~/.tmux.conf
 
 bind h split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
@@ -30,22 +47,6 @@ bind c split-window -h -c "#{pane_current_path}" "rc"
 bind b break-pane -d
 bind C-j choose-tree
 
-set -g escape-time 10
-set -g default-terminal "screen-256color"
-
-set -g mouse on
-setw -g mode-keys vi
-
-set -g status-keys vi
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
-set -g status-left-length 50
-set -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
-
-set -g base-index 1
-set -g renumber-windows on
-set -g default-command "reattach-to-user-namespace -l zsh"
-
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'C-v' send -X rectangle-toggle
+bind -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
