Ditch battery due to issues in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ set -g status-keys vi
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
 set -g status-left-length 50
-set -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
+set -g status-right "#(date '+%a, %b %d - %I:%M')"
 
 set -g base-index 1
 set -g renumber-windows on
