--- a/tmux.conf
+++ b/tmux.conf
@@ -15,38 +15,21 @@ set -g status-right "#(date '+%a, %b %d - %I:%M')"
 
 set -g base-index 1
 set -g renumber-windows on
-set -g default-command "reattach-to-user-namespace -l zsh"
-
 
 bind r source-file ~/.tmux.conf
+bind b break-pane -d
+bind C-j choose-tree
 
 bind h split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind w new-window -c "#{pane_current_path}"
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 
-bind -n S-Left resize-pane -L 2
-bind -n S-Right resize-pane -R 2
-bind -n S-Down resize-pane -D 1
-bind -n S-Up resize-pane -U 1
-
-bind -n C-Left resize-pane -L 10
-bind -n C-Right resize-pane -R 10
-bind -n C-Down resize-pane -D 5
-bind -n C-Up resize-pane -U 5
-
-bind s split-window -h -c "#{pane_current_path}" "rs"
-bind c split-window -h -c "#{pane_current_path}" "rc"
-
-bind b break-pane -d
-bind C-j choose-tree
-
-bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi 'C-v' send -X rectangle-toggle
-bind -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
