--- a/tmux.conf
+++ b/tmux.conf
@@ -1,28 +1,26 @@
 unbind C-b
 
 set -g prefix C-s
-setw -g mode-keys vi
-set -g mouse on
-
-set -g escape-time 10
+set -g base-index 1
 set -g default-terminal "screen-256color"
-
+set -s escape-time 0
+set -g history-limit 10000
+set -g mouse on
+set -g renumber-windows on
 set -g status-keys vi
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
 set -g status-left-length 50
 set -g status-right "#(date '+%a, %b %d - %I:%M')"
 
-set -g base-index 1
-set -g renumber-windows on
-
-bind r source-file ~/.tmux.conf
+bind Space switch-client -l
+bind e source-file ~/.tmux.conf
 bind b break-pane -d
-bind C-j choose-tree
-
+bind c new-window -c "#{pane_current_path}"
+bind o new-window -c ~/Documents/ "vim todo"
 bind h split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
-bind w new-window -c "#{pane_current_path}"
+bind j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
@@ -30,6 +28,7 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 
+setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
