--- a/git/config
+++ b/git/config
@@ -6,6 +6,7 @@
 [color]
   ui = auto
 [alias]
+  branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
   cm = !git fetch && git checkout master && git reset --hard origin/master && git checkout -
   cs = !git fetch && git checkout staging && git reset --hard origin/staging
   fix = commit --fixup
