--- a/git/config
+++ b/git/config
@@ -9,6 +9,7 @@
   branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
   fix = commit --fixup
   file = diff-tree --no-commit-id --name-only -r
+  my = log --oneline --author=\"Ralin Chimev\"
   mlog = log -E -i --grep
   clog = log -S
   plog = log --pretty=format:'%C(yellow)%h%C(reset) - %an [%C(green)%ar%C(reset)] %s'
