--- a/git/config
+++ b/git/config
@@ -5,6 +5,8 @@
   user = ralinc
 [color]
   ui = auto
+[advice]
+  skippedCherryPicks = false
 [alias]
   branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
   fix = commit --fixup
