Update tmux config for nvim

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,8 @@ set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
 set -g status-left-length 50
 set -g status-right "#(date '+%a, %b %d - %I:%M')"
+set -g focus-events on
+set -ga terminal-overrides ',xterm-256color:RGB'
 
 bind Space switch-client -l
 bind e source-file ~/.tmux.conf
