--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ bind b break-pane -d
 bind c new-window -c "#{pane_current_path}"
 bind o new-window -c ~/Documents/ "nvim todo"
 bind i new-window -c ~/myspace/dotfiles "nvim init.vim"
-bind h split-window -v -c "#{pane_current_path}"
+bind x split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
