--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,8 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 
+bind C-l send-keys C-l \; send-keys clear \; send-keys Enter
+
 setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
